Bug 501803 - Breeze Dark with accent color on headers cause Dolphin path bar text to become unreadable
Summary: Breeze Dark with accent color on headers cause Dolphin path bar text to becom...
Status: RESOLVED FIXED
Alias: None
Product: dolphin
Classification: Applications
Component: bars: location (other bugs)
Version First Reported In: 24.12.3
Platform: Arch Linux Linux
: NOR normal
Target Milestone: ---
Assignee: Dolphin Bug Assignee
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2025-03-20 19:02 UTC by Braelin Michelus
Modified: 2025-04-04 20:01 UTC (History)
4 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 6.14
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Braelin Michelus 2025-03-20 19:02:17 UTC
SUMMARY

I use a customized version of the Breeze Dark color scheme with accent colored titlebars. In Dolphin, the text, but not the icons, curiously, of the path bar become black and thus unreadable.

STEPS TO REPRODUCE
1. Create copy of Breeze Dark color scheme with accent colored titlebars
2. Switch to customized color scheme
3. Launch Dolphin

OBSERVED RESULT

Text in path bar is incorrect color, black, thus unreadable.

EXPECTED RESULT

Text in path bar is correct color, white, thus readable.

SOFTWARE/OS VERSIONS

Operating System: Arch Linux 
KDE Plasma Version: 6.3.3
KDE Frameworks Version: 6.12.0
Qt Version: 6.8.2
Graphics Platform: Wayland

ADDITIONAL INFORMATION

My custom color scheme is just Breeze Dark with accented titlebars and all colors tinted by accent color.
It is not required to enable all color tinting to cause the problem.

Bizarrely, I also noticed that the text becomes visible when the window is not in focus.

The light variant is unaffected. Dolphin is also the only app I've noticed that's affected.
Comment 1 Nate Graham 2025-03-21 18:11:19 UTC
Can confirm, and will be fixed by https://invent.kde.org/frameworks/kio/-/merge_requests/1842.
Comment 2 Bug Janitor Service 2025-03-28 09:23:39 UTC
A possibly relevant merge request was started @ https://invent.kde.org/frameworks/kio/-/merge_requests/1852
Comment 3 Akseli Lahtinen 2025-03-28 09:24:41 UTC
Made a bug fix for this for the current iteration, since the new style will not make it to the next release.
Comment 4 Akseli Lahtinen 2025-03-28 10:41:29 UTC
Git commit 4d1286de2909c9c5ae703ed45a41eac0cd471794 by Akseli Lahtinen.
Committed on 28/03/2025 at 09:21.
Pushed by akselmo into branch 'master'.

KUrlNavigatorButtonBase: Fix foreground color with accent color headers

The foreground color here would be wrong due to the background
the navbar is now using. This makes sure we use the proper text color.

M  +1    -1    src/filewidgets/kurlnavigatorbuttonbase.cpp

https://invent.kde.org/frameworks/kio/-/commit/4d1286de2909c9c5ae703ed45a41eac0cd471794
Comment 5 Akseli Lahtinen 2025-04-04 20:01:05 UTC
Git commit 7067680d23229b80dd92d837ee129e987ba875e7 by Akseli Lahtinen.
Committed on 04/04/2025 at 20:00.
Pushed by akselmo into branch 'master'.

KUrlNavigatorButton: Use arrow as separators

Due to the feedback of regular separator not being good enough for
separating folders, use an arrow separator instead.

This also refactors bunch of code around the button, so it should
be easier to tweak over time.

Remove icons due to the added clutter. They would work with full height chevrons but those are not technically feasible at this time.
Related: bug 501587, bug 501575, bug 501582, bug 501589, bug 501706
FIXED-IN: 6.14

M  +38   -20   src/filewidgets/kurlnavigator.cpp
M  +15   -0    src/filewidgets/kurlnavigator.h
M  +75   -70   src/filewidgets/kurlnavigatorbutton.cpp
M  +5    -3    src/filewidgets/kurlnavigatorbutton_p.h
M  +10   -14   src/filewidgets/kurlnavigatorbuttonbase.cpp
M  +1    -1    src/filewidgets/kurlnavigatortogglebutton.cpp

https://invent.kde.org/frameworks/kio/-/commit/7067680d23229b80dd92d837ee129e987ba875e7