KUrlNavigatorButtonBase: Fix foreground color with accent color headers

The foreground color here would be wrong due to the background
the navbar is now using. This makes sure we use the proper text color.

BUG: 501803